# projeto_0123

./: README.md  mkdocs.yml  pathviewer.py  pyproject.toml
data/output/: output.xlsx
src/: main.py
src/pipeline/: extract.py  load.py  transform.py
tests/: test_pipeline.py  test_request.py
