[tool.poetry]
name = "projeto-0123"
version = "0.1.0"
description = "Workshop #1 de 2023 | Como estruturar seu projeto de dados do zero"
authors = ["Rafael <rafaelrodriguesdsa@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "2.1.1"
openpyxl = "^3.1.2"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
