[tool.poetry]
name = "projeto-0123"
version = "0.1.0"
description = "Workshop #1 de 2023 | Como estruturar seu projeto de dados do zero"
authors = ["Rafael <rafaelrodriguesdsa@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "2.1.1"
openpyxl = "^3.1.2"
pytest = "^8.1.1"
isort = "^5.13.2"
blue = "^0.9.1"
pydocstyle = "^6.3.0"
pip-audit = "^2.7.2"
taskipy = "^1.12.2"
mkdocstrings-python = "^1.10.0"
pygments = "^2.17.2"
mkdocs-material = "^9.5.18"
pymdown-extensions = "^10.8"
mkdocs-bootstrap386 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]
format = "isort . && blue ."
test = "poetry run pytest -v"
run = "python3 src/main.py"
kill = "kill -9 $(lsof -t -i:8000)"